# Graphics

./: MatrixBuffer.py  color_testing.py  live_matrix.py  main.py  sample_matplotlib_render.py
matrixbuffer/: pyproject.toml  setup.py
py-app/: kivy_render.py  live_matrix.py  main.py  text_renderer.py
